Cambios en avance 3

--- a/src/app/customers3/customers3.page.html
+++ b/src/app/customers3/customers3.page.html
@@ -8,7 +8,42 @@
 </ion-header>
 
 <ion-content>
-
+    <div class="ion-text-center">
+        <h1>Isiukayotl kaxtilkopa</h1>
+    </div>
+    <iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1fiCUIK1Bc4tX5kcJqjZHmGnIt0CqwcFP/preview">   
+    </iframe>
+    <ion-accordion-group>
+        <ion-accordion value="colors" toggle-icon="arrow-down-circle">
+            <ion-item slot="header">
+                <ion-label>Subtitulo en español</ion-label>
+            </ion-item>
+            <ion-list slot="content">
+                <ion-item>
+                    <ion-label>*Sonido de puerta de supermercado* <br>LC1: Hola bienvenido a mi supermercado <br>LC1: ¿Como te llamas? <br>LC2: Hola me llamo maria <br>LC1: yo me llamo juan <br>LC1: ¿Como estas maria? <br>LC2: Bien gracias y tu juan <br>LC1: estoy
+                        mal <br>LC2: y ¿Porque? <br>LC1: no encuentro mi cartera <br>LC2: donde fue la ultima vez que lo viste <br>LC1: cuando estaba en los pasillos <br>LC2: vamos a buscarla <br>*Sonido de pasos* <br>LC2: Mire ahi esta su cartera <br>LC2:
+                        Esta es su cartera <br>LC1: Si muchas gracias <br>LC2: Denada <br>LC2: Adios <br>*Sonido de puerta de supermercado*</ion-label>
+                </ion-item>
+            </ion-list>
+        </ion-accordion>
+    </ion-accordion-group>
+    <ion-accordion-group>
+        <ion-accordion value="colors" toggle-icon="arrow-down-circle">
+            <ion-item slot="header">
+                <ion-label>Tlajkuiloli kaxtilkopa</ion-label>
+            </ion-item>
+            <ion-list slot="content">
+                <ion-item>
+                    <ion-label>
+                        *tsatsilistli kaltentli ueytiankistli* <br>LC1: Niltse ximopanolti nech ueytiankistli <br>LC1: ¿kenin motoka? <br>LC2: niltse notoka maria <br>LC1: niltse notoka guadalupe<br>LC1: ¿kenin otimopanolti maria?<br>LC2: kuali tlasojkamati
+                        juan
+                        <br>LC1: nika akuali <br>LC2: ¿nik? <br>LC1: tenamikilistli amakuiloni <br>LC2: ¿kanin ikak xokoyok sepan tlein ixpan <br>LC1: itkin ka temachcaltiloyan <br>LC2: tiui tlatemoa <br>*tsatsilistli sentlaxitl* <br>LC2: tlachia nexkan
+                        amakuiloni
+                        <br>LC2: ijkuilotik amakuiloni <br>LC1: tlasojkamati uel miek <br>LC2: amitla <br>LC2: anej <br>*tsatsilistli kaltentli ueytiankistli*</ion-label>
+                </ion-item>
+            </ion-list>
+        </ion-accordion>
+    </ion-accordion-group>
 </ion-content>
 <ion-toolbar>
     <ion-button slot="start" href="/numeros3">
