--- a/src/app/customers2/customers2.page.scss
+++ b/src/app/customers2/customers2.page.scss
@@ -1,3 +1,8 @@
 ion-toolbar {
     background-color: var(--ion-color-mycolor);
 }
+
+.user_Name {
+    display: flex;
+    justify-content: center;
+}
