--- a/src/app/salud2/salud2.page.html
+++ b/src/app/salud2/salud2.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 <ion-content>
     <ion-list>
-        <ion-radio-group value="enf1">
+        <ion-radio-group [(ngModel)]="value_selected3">
             <ion-list-header>
                 <ion-label>Pepena in patiani palouili</ion-label>
             </ion-list-header>
@@ -30,7 +30,7 @@
         </ion-radio-group>
     </ion-list>
     <ion-list>
-        <ion-radio-group value="enf2">
+        <ion-radio-group [(ngModel)]="value_selected4">
             <ion-list-header>
                 <ion-label>Pepena in patiani ouiyo</ion-label>
             </ion-list-header>
@@ -52,7 +52,7 @@
         </ion-radio-group>
     </ion-list>
     <ion-list>
-        <ion-radio-group value="enf3">
+        <ion-radio-group [(ngModel)]="value_selected5">
             <ion-list-header>
                 <ion-label>Pepena in patiani kentsin</ion-label>
             </ion-list-header>
@@ -69,7 +69,7 @@
                 <ion-label>Estreñimiento</ion-label>
                 <ion-radio slot="start" value="estreñimiento"></ion-radio>
             </ion-item>
-            <ion-button color="success" shape="round" fill="outline">Verificar</ion-button>
+            <ion-button color="success" shape="round" fill="outline" (click)="verificar()">Verificar</ion-button>
         </ion-radio-group>
     </ion-list>
 </ion-content>
