--- a/src/app/formulario/formulario.page.html
+++ b/src/app/formulario/formulario.page.html
@@ -19,7 +19,9 @@
     <ion-card>
       <ion-card-header>
         <ion-card-subtitle>Tipo: {{item.Tipo}}</ion-card-subtitle>
-        <ion-card-title>Especialidad: {{item.Especialidad}}</ion-card-title>
+        <ion-card-title>Especialidad: {{item.Especialidad}} <br>Edad: {{item.Edad}}
+        <br>Sexo: {{item.Sexo}} </ion-card-title>
+
       </ion-card-header>
     
       <ion-card-content>
