Cambio de Audios
Audios Originales con sus textos

--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -20,7 +20,7 @@
             <ion-item>
                 <ion-label>
                     <ion-img src="assets/img/saludofolder.jpg" [routerLink]="['/home']"></ion-img>
-                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan</p>
+                    <p>Ximopanolti timochtin tsaloa tetlapaloa nikan <br> (Nivel Basico para aprender saludos)</p>
                     <br>
                 </ion-label>
             </ion-item>
@@ -157,8 +157,8 @@
                 <ion-icon name="chatbubbles-outline" [routerLink]="['/formulario']"></ion-icon>
             </ion-fab-button>
         </ion-fab-list>
-        
-        
-        
+
+
+
     </ion-fab>
 </ion-content>
