--- a/src/app/home3/home3.page.html
+++ b/src/app/home3/home3.page.html
@@ -11,28 +11,28 @@
     <div class="ion-text-center">
         <h1>Isiukayotl kaxtilkopa</h1>
     </div>
-    <iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1zfBe4xHCJdMjaejrSOAvGXbTiQURT0tr/preview ">   
-    </iframe>
+    <p align="center"><iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1zfBe4xHCJdMjaejrSOAvGXbTiQURT0tr/preview">
+    </iframe></p>
     <ion-accordion-group>
-        <ion-accordion value="colors " toggle-icon="arrow-down-circle ">
-            <ion-item slot="header ">
+        <ion-accordion value="colors" toggle-icon="arrow-down-circle">
+            <ion-item slot="header">
                 <ion-label>Subtitulo en español</ion-label>
             </ion-item>
-            <ion-list slot="content ">
+            <ion-list slot="content">
                 <ion-item>
-                    <ion-label>*Sonido de puerta de supermercado* <br>LC1: Hola bienvenido a mi supermercado <br>LC1: ¿Como te llamas? <br>LC2: Hola me llamo maria <br>LC1: yo me llamo juan <br>LC1: ¿Como estas maria? <br>LC2: Bien gracias y tu juan <br>LC1: estoy
-                        mal <br>LC2: y ¿Porque? <br>LC1: no encuentro mi cartera <br>LC2: donde fue la ultima vez que lo viste <br>LC1: cuando estaba en los pasillos <br>LC2: vamos a buscarla <br>*Sonido de pasos* <br>LC2: Mire ahi esta su cartera <br>LC2:
-                        Esta es su cartera <br>LC1: Si muchas gracias <br>LC2: Denada <br>LC2: Adios <br>*Sonido de puerta de supermercado*</ion-label>
+                    <ion-label>*Sonido de puerta de supermercado* <br>LC1: Hola bienvenido a mi supermercado. <br>LC1: ¿Cómo te llamas?. <br>LC2: Hola me llamo María. <br>LC1: ¿Cómo estas María?. <br>LC2: Bien gracias y, ¿tu?.<br>LC1: Estoy mal.
+                        <br>LC2: ¿Pór que?. <br>LC1: No encuentro mi cartera. <br>LC2: Dónde fue la última vez que lo viste. <br>LC1: Cuando estaba en los pasillos. <br>LC2: Vamos a buscarla. <br>*Sonido de pasos* <br>LC2: Mire ahí está su cartera.
+                        <br>LC2: Está es su cartera. <br>LC1: Si muchas gracias. <br>LC2: De nada. <br>LC2: Adiós.</ion-label>
                 </ion-item>
             </ion-list>
         </ion-accordion>
     </ion-accordion-group>
     <ion-accordion-group>
-        <ion-accordion value="colors " toggle-icon="arrow-down-circle ">
-            <ion-item slot="header ">
+        <ion-accordion value="colors" toggle-icon="arrow-down-circle">
+            <ion-item slot="header">
                 <ion-label>Tlajkuiloli kaxtilkopa</ion-label>
             </ion-item>
-            <ion-list slot="content ">
+            <ion-list slot="content">
                 <ion-item>
                     <ion-label>
                         *tsatsilistli kaltentli ueytiankistli* <br>LC1: Niltse ximopanolti nech ueytiankistli <br>LC1: ¿kenin motoka? <br>LC2: niltse notoka maria <br>LC1: niltse notoka guadalupe<br>LC1: ¿kenin otimopanolti maria?<br>LC2: kuali tlasojkamati
@@ -46,12 +46,12 @@
     </ion-accordion-group>
 </ion-content>
 <ion-toolbar>
-    <ion-button slot="start " href="/folder/folder.module ">
-        <ion-icon slot="start " name="caret-back-outline ">
+    <ion-button slot="start" href="/folder/folder.module">
+        <ion-icon slot="start" name="caret-back-outline">
         </ion-icon>
     </ion-button>
-    <ion-button slot="end " href="/numeros3 ">
-        <ion-icon slot="start " name="caret-forward-outline ">
+    <ion-button slot="end" href="/numeros3">
+        <ion-icon slot="start" name="caret-forward-outline">
         </ion-icon>
     </ion-button>
 </ion-toolbar>
