--- a/src/app/customers3/customers3.page.html
+++ b/src/app/customers3/customers3.page.html
@@ -11,8 +11,8 @@
     <div class="ion-text-center">
         <h1>Isiukayotl kaxtilkopa</h1>
     </div>
-    <iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1fiCUIK1Bc4tX5kcJqjZHmGnIt0CqwcFP/preview">   
-    </iframe>
+    <p align="center"><iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/13-irwU28ODsDFI9iEIDHrjRlZvrBlDxr/preview">   
+    </iframe></p>
     <ion-accordion-group>
         <ion-accordion value="colors" toggle-icon="arrow-down-circle">
             <ion-item slot="header">
@@ -20,9 +20,10 @@
             </ion-item>
             <ion-list slot="content">
                 <ion-item>
-                    <ion-label>*Sonido de puerta de supermercado* <br>LC1: Hola bienvenido a mi supermercado <br>LC1: ¿Como te llamas? <br>LC2: Hola me llamo maria <br>LC1: yo me llamo juan <br>LC1: ¿Como estas maria? <br>LC2: Bien gracias y tu juan <br>LC1: estoy
-                        mal <br>LC2: y ¿Porque? <br>LC1: no encuentro mi cartera <br>LC2: donde fue la ultima vez que lo viste <br>LC1: cuando estaba en los pasillos <br>LC2: vamos a buscarla <br>*Sonido de pasos* <br>LC2: Mire ahi esta su cartera <br>LC2:
-                        Esta es su cartera <br>LC1: Si muchas gracias <br>LC2: Denada <br>LC2: Adios <br>*Sonido de puerta de supermercado*</ion-label>
+                    <ion-label>LC1: Hola, ¿Puedo ayudarte en algo?. <br> LC2: Si, estoy buscando color para pintar <br> mi casa. <br> LC2: Mira, me gusta el color azul. <br> ¿Qué opinas?.<br> LC1: Está bonito. Combina con el <br> color blanco. <br> LC1:¿Qué opinas
+                        de ese verde tierno? <br> Se ve muy bien con el color gris. <br>LC2: No me gusta tanto. <br> Elijamos otros colores. <br>LC1: ¿Qué te parece ese rosa?. <br> LC2: Si, me gusta más. <br>LC2: Lo llevamos, muchas gracias. <br>LC1:
+                        De nada hasta pronto.
+                    </ion-label>
                 </ion-item>
             </ion-list>
         </ion-accordion>
@@ -35,11 +36,9 @@
             <ion-list slot="content">
                 <ion-item>
                     <ion-label>
-                        *tsatsilistli kaltentli ueytiankistli* <br>LC1: Niltse ximopanolti nech ueytiankistli <br>LC1: ¿kenin motoka? <br>LC2: niltse notoka maria <br>LC1: niltse notoka guadalupe<br>LC1: ¿kenin otimopanolti maria?<br>LC2: kuali tlasojkamati
-                        juan
-                        <br>LC1: nika akuali <br>LC2: ¿nik? <br>LC1: tenamikilistli amakuiloni <br>LC2: ¿kanin ikak xokoyok sepan tlein ixpan <br>LC1: itkin ka temachcaltiloyan <br>LC2: tiui tlatemoa <br>*tsatsilistli sentlaxitl* <br>LC2: tlachia nexkan
-                        amakuiloni
-                        <br>LC2: ijkuilotik amakuiloni <br>LC1: tlasojkamati uel miek <br>LC2: amitla <br>LC2: anej <br>*tsatsilistli kaltentli ueytiankistli*</ion-label>
+                        LC1: niltse achuel iknelia in achi. <br> LC2: nika tlatemoali tlapali ika Chantiko. <br> LC2: tlachia paktia tlapali matlaltik <br> ¿ma ayekilua?. <br>LC1: xixo kualtsin. tlaneloli au tlapali. <br> LC1:¿tlein inik amo tlataleualtik?.
+                        <br>LC2:quema paloa achi. <br> LC1: in uika tlasojkamati uel miek. <br> LC2: amitla.
+                    </ion-label>
                 </ion-item>
             </ion-list>
         </ion-accordion>
