--- a/src/app/numeros3/numeros3.page.html
+++ b/src/app/numeros3/numeros3.page.html
@@ -10,8 +10,8 @@
     <div class="ion-text-center">
         <h1>Isiukayotl kaxtilkopa</h1>
     </div>
-    <iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1fiCUIK1Bc4tX5kcJqjZHmGnIt0CqwcFP/preview">   
-    </iframe>
+    <p align="center"><iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1KlWipdawCoYYLeXAEgqhs2BtWyfCOSWz/preview">   
+    </iframe></p>
     <ion-accordion-group>
         <ion-accordion value="colors" toggle-icon="arrow-down-circle">
             <ion-item slot="header">
@@ -19,9 +19,13 @@
             </ion-item>
             <ion-list slot="content">
                 <ion-item>
-                    <ion-label>*Sonido de puerta de supermercado* <br>LC1: Hola bienvenido a mi supermercado <br>LC1: ¿Como te llamas? <br>LC2: Hola me llamo maria <br>LC1: yo me llamo juan <br>LC1: ¿Como estas maria? <br>LC2: Bien gracias y tu juan <br>LC1: estoy
-                        mal <br>LC2: y ¿Porque? <br>LC1: no encuentro mi cartera <br>LC2: donde fue la ultima vez que lo viste <br>LC1: cuando estaba en los pasillos <br>LC2: vamos a buscarla <br>*Sonido de pasos* <br>LC2: Mire ahi esta su cartera <br>LC2:
-                        Esta es su cartera <br>LC1: Si muchas gracias <br>LC2: Denada <br>LC2: Adios <br>*Sonido de puerta de supermercado*</ion-label>
+                    <ion-label>
+                        LC1: Hola Mary, ¿Cómo estas?. <br> LC2: Muy bien gracias y ¿tú?. <br> LC1: Igual bien, gracias. <br> LC1: Oye Mary, ¿Tienes una familia <br> grande o pequeña?. <br> LC2: Tengo una familia enorme. <br> Tengo 1 hermano y 9 hermanas.
+                        <br> LC1: ¿ 1 hermano y 9 hermanas? <br> Yo soy hijo único, <br> ¿Cuántos hermanos tienes?. <br> LC2: ¡Solo 1!. <br> LC1: ¡Qué bien! ¿Te llevas muy bien <br> con tus 8 hermanas?. <br> LC2: Si, convivimos mucho. <br> LC1: ¿Cuántos
+                        años tiene tu hermana <br> mayor?. <br> LC2: Tiene 30 años, pero el próximo <br> mes cumple 31. <br> LC1: ¡Que bien!, y la ¿menor?. <br> LC2: Ella tiene 13 años, es aún muy pequeña. <br> LC1: Oh si, y ¿Cuántas tías y tíos tienes?.
+                        <br> LC2: Mmm déjame ver, 7 tías y 4 tíos. <br> LC1: En realidad tienes una familia grande, <br> Mary, yo quisiera tener una falimia <br> más grande. <br> LC2: Así es, me dio gusto saludarte. <br> LC1: Gracias, igualmente adiós.
+                        <br> LC2: Adiós cuidate.
+                    </ion-label>
                 </ion-item>
             </ion-list>
         </ion-accordion>
@@ -34,11 +38,11 @@
             <ion-list slot="content">
                 <ion-item>
                     <ion-label>
-                        *tsatsilistli kaltentli ueytiankistli* <br>LC1: Niltse ximopanolti nech ueytiankistli <br>LC1: ¿kenin motoka? <br>LC2: niltse notoka maria <br>LC1: niltse notoka guadalupe<br>LC1: ¿kenin otimopanolti maria?<br>LC2: kuali tlasojkamati
-                        juan
-                        <br>LC1: nika akuali <br>LC2: ¿nik? <br>LC1: tenamikilistli amakuiloni <br>LC2: ¿kanin ikak xokoyok sepan tlein ixpan <br>LC1: itkin ka temachcaltiloyan <br>LC2: tiui tlatemoa <br>*tsatsilistli sentlaxitl* <br>LC2: tlachia nexkan
-                        amakuiloni
-                        <br>LC2: ijkuilotik amakuiloni <br>LC1: tlasojkamati uel miek <br>LC2: amitla <br>LC2: anej <br>*tsatsilistli kaltentli ueytiankistli*</ion-label>
+                        LC1: niltse Mary,¿kenin otimopanolti? <br> LC2: senka kuali.¿kenin otimopanolti? <br> LC1: senka kuali tlasojkamati <br> LC1: Mary ¿ kenimin chantlakauan uey o tlajkotontli? <br> LC2: pia chantlakauan uey, pia chiknaui temini <br>                        LC1: ¿chiknaui temini? nejuatl siuakonetl ¿keskipan iknitl ? <br> LC2: se, pia chikueyi ueltiutli <br> LC1: senka kuali akia auiya <br> LC2: niltse Mary,¿kenin otimopanolti? <br> LC1: senka kuali.¿kenin otimopanolti? <br> LC2:senka
+                        kuali tlasojkamati <br> LC1: Mary ¿ kenimin chantlakauan uey <br> o tlajkotontli? <br> LC2: pia chantlakauan uey, pia chiknaui <br> temini <br> LC1: ¿chiknaui temini? nejuatl siuakonetl <br> ¿keskipan iknitl? <br> LC2: se, pia
+                        chikueyi ueltiutli
+                        <br> LC1: senka kuali akia auiya
+                    </ion-label>
                 </ion-item>
             </ion-list>
         </ion-accordion>
