--- a/src/app/salud3/salud3.page.html
+++ b/src/app/salud3/salud3.page.html
@@ -11,8 +11,8 @@
     <div class="ion-text-center">
         <h1>Isiukayotl kaxtilkopa</h1>
     </div>
-    <iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1fiCUIK1Bc4tX5kcJqjZHmGnIt0CqwcFP/preview">   
-    </iframe>
+    <p align="center"><iframe frameborder="0" width="350" height="100" src="https://drive.google.com/file/d/1xleE9pobdp0V78Ag2A6MZK_p0rroDImg/preview">   
+    </iframe></p>
     <ion-accordion-group>
         <ion-accordion value="colors" toggle-icon="arrow-down-circle">
             <ion-item slot="header">
@@ -20,9 +20,12 @@
             </ion-item>
             <ion-list slot="content">
                 <ion-item>
-                    <ion-label>*Sonido de puerta de supermercado* <br>LC1: Hola bienvenido a mi supermercado <br>LC1: ¿Como te llamas? <br>LC2: Hola me llamo maria <br>LC1: yo me llamo juan <br>LC1: ¿Como estas maria? <br>LC2: Bien gracias y tu juan <br>LC1: estoy
-                        mal <br>LC2: y ¿Porque? <br>LC1: no encuentro mi cartera <br>LC2: donde fue la ultima vez que lo viste <br>LC1: cuando estaba en los pasillos <br>LC2: vamos a buscarla <br>*Sonido de pasos* <br>LC2: Mire ahi esta su cartera <br>LC2:
-                        Esta es su cartera <br>LC1: Si muchas gracias <br>LC2: Denada <br>LC2: Adios <br>*Sonido de puerta de supermercado*</ion-label>
+                    <ion-label>
+                        LC1: Buenos días Doctor Marcos. <br> LC2: Buenos días Nelson <br> ¿Cómo puedo ayudarte?. <br> LC1: Pues, me he sentido mareado y débil <br> y ahora mismo tengo un dolor de cabeza. <br> LC2: ¿Come mucho dulce?. <br> LC1: Si, me
+                        gusta mucho. <br> LC2: Debería comer menos azúcar. <br> ¿Tiene algún otro síntoma?. <br> LC1: En realidad, quería decirle que tengo <br> sueño todo el tiempo. <br> LC2: Voy a revisar su pulmón. <br> LC1: Perfecto. <br> LC2: Su
+                        pulmón está bien. <br> LC2: ¿Es alérgico a algún medicamento?. <br> LC1: No. <br> LC2: Entonces, le voy a prescribir unos <br> analgésicos por el momento, tome 1 <br> tableta durante 5 días. <br> LC2: También necesita hacerse un
+                        análisis <br> de sangre y descansar por unos días. <br> LC1: Prometo que lo haré. <br> LC2: Vuelva con los resultados y le daré un <br> diagnóstico y un tratamiento. <br> LC1: Gracias doctor, tenga un buen día.
+                    </ion-label>
                 </ion-item>
             </ion-list>
         </ion-accordion>
@@ -35,11 +38,10 @@
             <ion-list slot="content">
                 <ion-item>
                     <ion-label>
-                        *tsatsilistli kaltentli ueytiankistli* <br>LC1: Niltse ximopanolti nech ueytiankistli <br>LC1: ¿kenin motoka? <br>LC2: niltse notoka maria <br>LC1: niltse notoka guadalupe<br>LC1: ¿kenin otimopanolti maria?<br>LC2: kuali tlasojkamati
-                        juan
-                        <br>LC1: nika akuali <br>LC2: ¿nik? <br>LC1: tenamikilistli amakuiloni <br>LC2: ¿kanin ikak xokoyok sepan tlein ixpan <br>LC1: itkin ka temachcaltiloyan <br>LC2: tiui tlatemoa <br>*tsatsilistli sentlaxitl* <br>LC2: tlachia nexkan
-                        amakuiloni
-                        <br>LC2: ijkuilotik amakuiloni <br>LC1: tlasojkamati uel miek <br>LC2: amitla <br>LC2: anej <br>*tsatsilistli kaltentli ueytiankistli*</ion-label>
+                        LC1: kuali tonali tisitl Marcos <br> LC2: kuali tonali Nelson.¿kenin otimouikak? <br> LC1: mati akuali tsontekoneua kokoxki <br> LC2: apitsti miak nekutik? <br> LC1: me paloa miak <br> LC2: uikilia apitsti nenkan, okse tlamantli
+                        <br> kokolistli <br> LC1: tenkuyotl mochipan Tiankistenko <br> kochistli <br> LC2: niau a itta ismachioli <br> LC1: yektik <br> LC2: xixo chinkualnematini achi <br> LC1: amo niman niau atlitia olpatli <br> LC2: tlein motechmoneki
+                        ayi ixtlamatki <br> estli in oyu <br> LC1: ojpana intlok tlasojkamati uel miek <br> yekkan
+                    </ion-label>
                 </ion-item>
             </ion-list>
         </ion-accordion>
